      - towny.town.spawn.town : Ability to spawn to your own town.
      - towny.town.spawn.nation : Ability to spawn to other towns in your nation.
      - towny.town.spawn.ally : Ability to spawn to towns in nations allied with yours.
      - towny.town.spawn.public : Ability to spawn to unaffilated public towns.
v0.76.1.5:
    - Added missing permission nodes to support...
      - towny.wild.*
v0.76.1.6:
    - Fixed a bug preventing players placing fences if they are admins.
v0.76.1.7:
	- Adjusted wilderness permissions
	  Towny will first check for permisison nodes.
	  If no permissions are found the wild_ignore list is checked.
	  If none of the above give permissions the worlds Wilderness zone settings are checked.
	- Enabled use of the following commands for admins while still using permissions.
	  '/townyworld set usedefault'
	  '/townyworld set wildperm'
	  '/townyworld set wildperm [build,destroy,switch,ItemUse]'
	  '/townyworld set wildignore xx,xx,xx'
	  '/townyworld set wildname Wildy'
	- Added a fix for tags in data files crashing towny on load.
v0.76.1.8:
	- Fixed town spawns to correctly follow config and permissions settings.
v0.76.1.9:
	- Fixed NullPointerException generated by onPlayerInteractEvent.
	- Fixed message when setting Town tags to not say nation.
	- Fixed '/nation deposit' error message.
	- Added handling of World initialization to fix a bug when creating new worlds with Multiverse.
v0.76.1.10:
	- Permit residents not in town to use public spawns again.
	- Corrected permissions node checking to match those in the config for spawn travel.
v0.76.1.11:
	- Removed a lot of debug spam from permission checking.
v0.76.1.12:
	- Fix for a possible error on shutdown with active warzones.
	- Fix so players can only attack other towns IF the correct number of players are online on BOTH sides.
	- If your town/nation is attacked with warflags the attackers will automaticalyl be set as enemies (allows you to attack back).